# python-template

./: .flake8  .gitignore  CHANGELOG.md  README.md  pyproject.toml  tox.ini  venv.sh
src/python_template/: __init__.py  __main__.py
test/: test_template.py
